syntax = "proto3";
package instantbible.service;

import "data.proto";

message Response {
  message VerseResult {
    message Ranking {
      // The number of typos matched
      int32 typos = 1;
      // The number of words matched from the query
      int32 queryWords = 2;
      // The total proximity of adjacent word pairs in the query
      int32 proximity = 3;
      // The number of exact words matched (no prefix or typo)
      int32 exact = 4;
    }

    instantbible.data.VerseKey key = 1;
    instantbible.data.Translation topTranslation = 2;
    repeated string text = 3;
    repeated string highlights = 4;
    repeated Ranking rankings = 5;
    int32 popularity = 6;
  }

  message Timings {
    int32 tokenize = 1;
    int32 fst = 2;
    int32 score = 3;
    int32 rank = 4;
    int32 total = 5;
  }

  repeated VerseResult results = 1;
  Timings timings = 2;
}